--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "joi": "^17.6.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
